[gd_scene load_steps=22 format=3 uid="uid://cvukrrxa8nc4y"]

[ext_resource type="Texture2D" uid="uid://cqt8cgjm1stc6" path="res://art/player sprites/FRLG Trainer Backs 06.png" id="1_5tg6l"]
[ext_resource type="Texture2D" uid="uid://diosgj2is6s0e" path="res://art/pokeballs/pokeballs.png" id="2_72k6m"]
[ext_resource type="Texture2D" uid="uid://bdk8afgqy4ks0" path="res://art/pokeballs/pokeball_single_texture.tres" id="2_e5sgh"]
[ext_resource type="Texture2D" uid="uid://cq2j2l0dlxjsv" path="res://art/player sprites/FRLG Trainer Backs 07.png" id="2_ryk52"]
[ext_resource type="Texture2D" uid="uid://d2x6pbjew027n" path="res://art/player sprites/FRLG Trainer Backs 08.png" id="3_njeh0"]
[ext_resource type="Texture2D" uid="uid://d0ykbo57ultp7" path="res://art/player sprites/FRLG Trainer Backs 09.png" id="4_7vtx6"]
[ext_resource type="Texture2D" uid="uid://bdq1pg6ux6lps" path="res://art/player sprites/FRLG Trainer Backs 10.png" id="5_fsgmt"]
[ext_resource type="Script" path="res://scripts/battle_trainer.gd" id="6_w6dqi"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1pvuu"]
atlas = ExtResource("2_72k6m")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v8ymv"]
atlas = ExtResource("2_72k6m")
region = Rect2(0, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdhc4"]
atlas = ExtResource("2_72k6m")
region = Rect2(0, 192, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_ks7xm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1pvuu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8ymv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8ymv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdhc4")
}],
"loop": false,
"name": &"open",
"speed": 4.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_57jcp"]
atlas = ExtResource("1_5tg6l")
region = Rect2(0, 0, 38, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_rl7ei"]
atlas = ExtResource("2_ryk52")
region = Rect2(0, 0, 57, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_qm4jw"]
atlas = ExtResource("3_njeh0")
region = Rect2(0, 0, 53, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_wd7nc"]
atlas = ExtResource("4_7vtx6")
region = Rect2(0, 0, 64, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_r2mqp"]
atlas = ExtResource("5_fsgmt")
region = Rect2(0, 0, 56, 52)

[sub_resource type="SpriteFrames" id="SpriteFrames_ug6ug"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_57jcp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rl7ei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qm4jw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wd7nc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r2mqp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_57jcp")
}],
"loop": false,
"name": &"TrainerThrow",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_bqohj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pokeball:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-21, 9)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pokeball:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pokeball:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.765676]
}

[sub_resource type="Animation" id="Animation_ex2wf"]
resource_name = "ThrowPokeball"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pokeball:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.4, 0.666666, 0.933333, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-21, 9), Vector2(-3.99999, -8), Vector2(40, -15), Vector2(67, -9)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pokeball:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.333333, 0.433333, 1.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pokeball:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.533333, 0.766666, 1, 1.23333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [1.17444, 3.6185, 5.4219, 6.28319]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PokeballOpening")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.46667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"open", 1.0, false],
"method": &"play"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_esiv2"]
_data = {
"RESET": SubResource("Animation_bqohj"),
"ThrowPokeball": SubResource("Animation_ex2wf")
}

[node name="BattleTrainer" type="Node2D"]
script = ExtResource("6_w6dqi")

[node name="BattleAnimation" type="Timer" parent="."]
wait_time = 0.5

[node name="PokeballOpening" type="AnimatedSprite2D" parent="."]
top_level = true
position = Vector2(67, -9)
scale = Vector2(0.8, 0.8)
sprite_frames = SubResource("SpriteFrames_ks7xm")
animation = &"open"

[node name="Pokeball" type="Sprite2D" parent="."]
position = Vector2(-21, 9)
rotation = 0.765676
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_e5sgh")

[node name="Trainer" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ug6ug")
animation = &"TrainerThrow"
speed_scale = 1.3

[node name="PokeballMove" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_esiv2")
}
speed_scale = 1.6

[node name="BallOpen" type="Timer" parent="."]
wait_time = 0.2

[node name="CloseBall" type="Timer" parent="."]
wait_time = 0.85

[connection signal="timeout" from="BattleAnimation" to="." method="_on_battle_animation_timeout"]
[connection signal="timeout" from="BallOpen" to="." method="_on_ball_open_timeout"]
[connection signal="timeout" from="CloseBall" to="." method="_on_close_ball_timeout"]
